--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,13 +10,12 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.4.2",
-    "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "@metamask/jazzicon": "^2.0.0",
-    "@usedapp/coingecko": "^0.4.3",
     "@usedapp/core": "^0.11.0",
     "axios": "^0.26.0",
+    "ethers": "^5.5.4",
     "framer-motion": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
